--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase-admin": "^13.4.0",
     "moment": "^2.30.1",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "node-cron": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
