--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.21.2",
     "firebase-admin": "^13.4.0",
     "moment": "^2.30.1",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "node-cron": "^4.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
